# virtual-dataset

./: .gitignore  LICENCE.txt  README.md  setup.cfg
.github/workflows/: build-conda-recipe.yaml  test_and_build.yml
conda-recipe/: meta.yaml
data/: bad_test.toml  complex.json  simple.json  simple.yaml  test1.json  test1.yaml
test/: conftest.py  test_cmd.py  test_mounting.py  test_object_parsing.py
tests/: __init__.py  conftest.py  test_cmd.py  test_mounting.py  test_object_parsing.py
vdataset/: __init__.py  __main__.py  _cmd.py  _core.py  _mount_samples.py
