[metadata]
name = virtual-dataset
version = 1.0
url = https://github.com/nhamilakis/virtual-dataset
license = MIT
license_file = LICENCE.txt
author = Nicolas Hamilakis
maintainer = Nicolas Hamilakis
maintainer_email = nick.hamilakis562@gmail.com
description = A small utility that allows to mount virtually a list of files as a folder.
long_description = file: README.md
long_description_content_type = text/md
keywords = todo
platform = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

project_urls =
    Github = https://github.com/nhamilakis/virtual-dataset
    Pip = ...

[options]
packages = find:
package_dir =
    =.

[options.packages.find]
where = .
include = vdata*
exclude = tests

[options.entry_points]
console_scripts =
    vmount=vdataset._cmd:main

[bdist_wheel]
universal = true
